# steam-case-prices

./: README.md  fetch_prices.py  prices.json  pyproject.toml
.github/workflows/: fetch-prices.yml  lint.yml  test.yml  update-uv-lock.yml
google-apps-script/: main.gs
tests/: test_fetch_prices.py
